welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: '=' expected but '(' found.
def haveBaggle(): avance()
                        ^Program:4: error: illegal start of simple expression
}
^